<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddShowActivity">

    <TextView
        android:id="@+id/addCharacter_title_tv_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/addCharacter_title_tv"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.082" />

    <TextView
        android:id="@+id/addCharacter_name_tv_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="161dp"
        android:text="@string/general_name_tv"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addCharacter_title_tv_id" />

    <TextView
        android:id="@+id/addCharacter_dayOfBirth_tv_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="60dp"
        android:text="@string/addCharacter_dateOfBirth_tv"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addCharacter_name_tv_id" />

    <EditText
        android:id="@+id/addCharacter_name_et_id"
        android:layout_width="165dp"
        android:layout_height="48dp"
        android:layout_marginTop="152dp"
        android:layout_marginEnd="24dp"
        android:ems="10"
        android:hint="@string/addCharacter_name_hint"
        android:inputType="text"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addCharacter_title_tv_id"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/addCharacter_dayOfBirth_et_id"
        android:layout_width="167dp"
        android:layout_height="56dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="24dp"
        android:ems="10"
        android:hint="@string/addCharacter_dateOfBirth_hint"
        android:inputType="text"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addCharacter_name_et_id" />

    <Button
        android:id="@+id/addCharacter_save_btn_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="200dp"
        android:layout_marginEnd="24dp"
        android:text="@string/general_save_btn"
        app:layout_constraintEnd_toStartOf="@+id/addCharacter_cancel_btn_id"
        app:layout_constraintHorizontal_bias="0.154"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addCharacter_dayOfBirth_tv_id" />

    <Button
        android:id="@+id/addCharacter_cancel_btn_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="186dp"
        android:layout_marginEnd="60dp"
        android:text="@string/general_cancel_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addCharacter_dayOfBirth_et_id" />

</androidx.constraintlayout.widget.ConstraintLayout>