<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OverviewActivity">

    <TextView
        android:id="@+id/overview_title_tv_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/overview_title_tv"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.124" />

    <Button
        android:id="@+id/overview_character_btn_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="60dp"
        android:text="@string/general_character"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/overview_list_rv_id" />

    <Button
        android:id="@+id/overview_show_btn_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="24dp"
        android:text="@string/general_show"
        app:layout_constraintEnd_toStartOf="@+id/overview_character_btn_id"
        app:layout_constraintHorizontal_bias="0.168"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/overview_list_rv_id" />

    <androidx.recyclerview.widget.RecyclerView
        android:id='@+id/overview_list_rv_id'
        android:layout_width="308dp"
        android:layout_height="336dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.562" />

    <TextView
        android:id="@+id/overview_show_tv_id"
        android:layout_width="121dp"
        android:layout_height="31dp"
        android:layout_marginTop="61dp"
        android:text="@string/general_show"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/overview_list_rv_id"
        app:layout_constraintTop_toBottomOf="@+id/overview_title_tv_id" />

    <TextView
        android:id="@+id/overview_character_tv_id"
        android:layout_width="121dp"
        android:layout_height="31dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="32dp"
        android:text="@string/general_character"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/overview_list_rv_id"
        app:layout_constraintTop_toBottomOf="@+id/overview_title_tv_id" />

</androidx.constraintlayout.widget.ConstraintLayout>